--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=7" rel="stylesheet" />
+    <link href="styles.css?v=8" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -51,48 +51,37 @@
                 4th
                 September 2021</details></button>
         <div class="content">
-            <p> Whether a beginner, student, graduate, junior or senior, gaining access to educational content and
-                identifying resources appropriate to your level whilst also meeting your requirements can often be
-                tricky, especially starting out. </p>
-            <p> When browsing through any search engine, the first links available when searching ‘learn to
-                code’ are listings by larger companies offering fast-tracked courses, boot-camps, classes and
-                subscriptions. Before it is said, yes, trying a similar search for information on other industries like
-                this will often obtain the same result. The internet is vast and searches can often be incoherent or
-                imprecise due the phrasing or vagueness of your search. This can often be confronting and deterring as a
-                beginner, and like most things takes time and patience to understand and define. </p>
+            <p>When starting out, gaining access to educational content and identifying resources appropriate to your
+                level can often be tricky.</p>
+            <p>The first links available when searching ‘learn to code’ are listings by larger companies offering
+                fast-tracked courses, boot camps, classes and subscriptions. The internet is vast, and search algorithms
+                will often bring up a more popular link based on rank rather than showing the least complex result.</p>
             <img class="blog-image long" src="./images/blog/google-search.jpg" />
-            <p> So, where do you start? </p>
-            <p> The first thing worth noting is that there are many different learning styles. Quite often we hear about
-                them in passing, but not all content caters for multiple learning styles. Being able to first identify
-                your learning style - or even styles - is key in optimising your learning. This will enable you to build
-                techniques to better engage and understand the information given, not only aiding you for your studies,
-                but equipping you with skills that can be utilised within your career. </p>
+            <p>So, where do you start?</p>
+            <p>There are many different learning styles, but not all content caters for these. First, identifying your
+                learning styles is critical in optimising your learning. This will enable you to build techniques to
+                better engage and understand the information given, not only aiding you in your studies but equipping
+                you with skills that can be utilised within your career.</p>
             <img class="blog-image square" src="./images/blog/learning-styles.jpeg" />
-            <p> The next part can be a bit more challenging – sourcing information which is relevant to the level you
-                are at. Instances of courses and video tutorials are easily accessible but can often be daunting, and if
-                intended at a higher level audience, the experience can be disengaging and demotivate your enthusiasm to
-                explore more into the subject. </p>
-            <p>Starting out with resources that provide a basic hands-on approach such as online code editors and
-                interactive tutorial sections, which allow you to work with and edit code, will assist you in gaining a
-                better understanding of what code is and how changes within it affects the result.</p>
-                <img class="blog-image square" src="./images/blog/lightbulb-moment.jpg" />
-            <p>When I first began looking into programming, one of the first recommendations online mentioned to have a
-                project in mind, and choose a programming language. This can definitely be great incentive to begin
-                learning and work on your own passion project, but not all will start with this direction. As you become
-                more attuned to programming, you will find that some ideas can be complex to start with, or may have
-                another programming language more suitable for the project you have in mind – but don’t let this deter
-                you from trying!</p>
-            <p>When looking to start researching and learning a language, a guide which ranks them in order of
-                difficulty or specifies easier languages to start with as a beginner is a great way to commence
-                learning. There are a few websites worth mentioning which provide a great introduction to a range of
-                programming languages and are easy to navigate and follow – I will list a few at the end of this blog
-                entry which I find quite insightful and use regularly for guidance.</p>
+            <p>Instances of courses and video tutorials are easily accessible, but it can be challenging to
+                source information relevant to your level. Starting with online code editors or interactive tutorial
+                sections that allow you to work with the code gives a more hands-on approach. This will assist you in
+                gaining a better understanding of what code is and how changes within it affect the result.</p>
+            <p>One of the first recommendations I came across online when looking to start was to come up with a simple
+                project and choose a programming language. This can definitely be a great incentive to begin learning
+                and work on your own passion project, but not all will start with this direction. As you become more
+                attuned to programming, you will find that some project ideas may be too complex to begin with or may
+                have a more suitable language for that project type. In saying this, don't let this deter you from
+                trying and researching different projects to start with!</p>
+            <p>A search of the most popular programming languages or a language difficulty list is a great guide to
+                commence learning. There are a few websites that provide an easy-to-follow introduction to a range of
+                programming languages. At the end of this blog, I will list a few that I find insightful and regularly
+                use for guidance.</p>
             <img class="blog-image square" src="./images/blog/programming-languages-2021.jpg" />
-            <p>Starting with a simple project that has been covered well and using your resources as a guide rather than
-                following a video or tutorial step-by-step will ultimately benefit your learning, encouraging your
-                involvement and problem solving skills, rather than relying on mimicking or memorising the session.
-                Not only does this help you understand the code, but you feel more achieved in knowing that you figured
-                it out – puzzles are your friends!</p>
+            <p>To encourage the most beneficial way of learning, start with a simple project that has been covered well
+                and use your resources as a guide rather than following a video or tutorial. Not only will this assist
+                you in better understanding the code, you will feel more achieved in knowing you figured it out -
+                puzzles are your friends!</p>
             <p>A solution can be implemented in many different ways and refined as you learn more. Don’t let a challenge
                 stop you from achieving knowledge.</p>
             <p class="text-center"><q><i>You don't have to be great to start, but you have to start to be great.</i></q>
