--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=8" rel="stylesheet" />
+    <link href="styles.css?v=9" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -47,10 +47,9 @@
             <h6 class="text-center">A&emsp;G R A D U A T E S&emsp;G U I D E&emsp;T O</h6>
             <h3 class="text-center">D E V E L O P I N G</h3>
         </div>
-        <button type="button" class="collapsible">PART ONE: Learning Styles and Resources<div class="blogdate">
-                4th
-                September 2021</details></button>
+        <button type="button" class="collapsible">PART ONE: Learning Styles & Resources</button>
         <div class="content">
+            <p>| By Lachelle Pavlovic | Sept 04, 2021 |</p>
             <p>When starting out, gaining access to educational content and identifying resources appropriate to your
                 level can often be tricky.</p>
             <p>The first links available when searching ‘learn to code’ are listings by larger companies offering
@@ -102,11 +101,9 @@
                     href="https://www.tutorialspoint.com/tutorialslibrary.htm">tutorialspoint</a>
             </p>
         </div>
-        <button type="button" class="collapsible">PART TWO: Programming Terms and Guidelines<div class="blogdate">COMING
-                SOON!
-                </details></button>
+        <button type="button" class="collapsible">PART TWO: Terms & Guidelines</button>
         <div class="content">
-            <p>Coming soon!</p>
+            <p>| By Lachelle Pavlovic | COMING SOON! |</p>
         </div>
 
         <script>
