--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=8" rel="stylesheet" />
+    <link href="styles.css?v=9" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -70,14 +70,17 @@
         </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
-                src="images/envelope-fill.svg" alt="email" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><img class="footer-icon"
-                src="images/instagram.svg" alt="instagram" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon"
-                src="images/linkedin.svg" alt="linkedin" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
-                alt="github" /></a>
+            <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
+                    class="footer-icon" src="images/envelope-fill.svg" alt="email" /></a>
+            <a class="footer-links" target="_blank" rel="noopener noreferrer"
+                href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/instagram.svg"
+                    alt="instagram" /></a>
+            <a class="footer-links" target="_blank" rel="noopener noreferrer"
+                href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/linkedin.svg"
+                    alt="linkedin" /></a>
+            <a class="footer-links" target="_blank" rel="noopener noreferrer"
+                href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
+                    alt="github" /></a>
     </footer>
 </body>
 
