project preview update

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=10" rel="stylesheet" />
+    <link href="styles.css?v=11" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -46,10 +46,26 @@
         <div class="heading-title">
             <h3 class="text-center">P R O J E C T S</h3>
         </div>
-        <h5 class="heading-subtitle">CALCULATOR</h5>
-        <video class="project-video" src="./videos/calculator.mp4" controls muted loop></video>
-        <h5 class="heading-subtitle">SPOCK ROCK GAME</h5>
-        <video class="project-video" src="./videos/spock.mp4" controls muted loop></video>
+        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
+                rel="noopener noreferrer" href="https://github.com/lachelle-anne/music-player.git">MUSIC PLAYER</a></h5>
+        <video class="project-video" src="./videos/music.mp4" controls poster="./images/projects/music.png"></video>
+        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
+                rel="noopener noreferrer" href="https://github.com/lachelle-anne/spock-rock-game.git">SPOCK ROCK
+                GAME</a></h5>
+        <video class="project-video" src="./videos/spock.mp4" controls poster="images/projects/spock.png"></video>
+        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
+                rel="noopener noreferrer" href="https://github.com/lachelle-anne/calculator.git">CALCULATOR</a></h5>
+        <video class="project-video" src="./videos/calculator.mp4" controls poster="images/projects/calculator.png"></video>
+        <h4 class="heading-subtitle text-center">DIPLOMA PROJECTS</h4>
+        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
+                rel="noopener noreferrer" href="https://github.com/lachelle-anne/membership-system.git">MEMBERSHIP
+                SYSTEM</a></h5>
+        <video class="project-video" src="./videos/member-system.mp4" controls poster="images/projects/member-system.png"></video>
+        <h4 class="heading-subtitle text-center">CERTIFICATE IV PROJECTS</h4>
+        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
+                rel="noopener noreferrer" href="https://github.com/lachelle-anne/order-management-system.git">ORDER
+                MANAGEMENT SYSTEM</a></h5>
+        <video class="project-video" src="./videos/order-system.mp4" controls poster="images/projects/order-system.png"></video>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
         <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
