project preview update

--- a/projects.html
+++ b/projects.html
@@ -55,17 +55,18 @@
         <video class="project-video" src="./videos/spock.mp4" controls poster="images/projects/spock.png"></video>
         <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
                 rel="noopener noreferrer" href="https://github.com/lachelle-anne/calculator.git">CALCULATOR</a></h5>
-        <video class="project-video" src="./videos/calculator.mp4" controls poster="images/projects/calculator.png"></video>
-        <h4 class="heading-subtitle text-center">DIPLOMA PROJECTS</h4>
+        <video class="project-video" src="./videos/calculator.mp4" controls
+            poster="images/projects/calculator.png"></video>
         <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
                 rel="noopener noreferrer" href="https://github.com/lachelle-anne/membership-system.git">MEMBERSHIP
                 SYSTEM</a></h5>
-        <video class="project-video" src="./videos/member-system.mp4" controls poster="images/projects/member-system.png"></video>
-        <h4 class="heading-subtitle text-center">CERTIFICATE IV PROJECTS</h4>
+        <video class="project-video" src="./videos/member-system.mp4" controls
+            poster="images/projects/member-system.png"></video>
         <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
                 rel="noopener noreferrer" href="https://github.com/lachelle-anne/order-management-system.git">ORDER
                 MANAGEMENT SYSTEM</a></h5>
-        <video class="project-video" src="./videos/order-system.mp4" controls poster="images/projects/order-system.png"></video>
+        <video class="project-video" src="./videos/order-system.mp4" controls
+            poster="images/projects/order-system.png"></video>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
         <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
