project preview update

--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,8 @@
                 MANAGEMENT SYSTEM</a></h5>
         <video class="project-video" src="./videos/order-system.mp4" controls
             poster="images/projects/order-system.png"></video>
+        <h5 class="project-subheading bubble text-center"><a class="project-link" href="https://lachelle-anne.com/">LACHELLE-ANNE.COM</a></h5>
+                <div class="paragraph"><p>This website is an ongoing project of mine to use as my portfolio, displaying my projects and blog entries. </p></div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
         <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
