--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=11" rel="stylesheet" />
+    <link href="styles.css?v=12" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -47,7 +47,8 @@
             <h6 class="text-center">A&emsp;G R A D U A T E S&emsp;G U I D E&emsp;T O</h6>
             <h3 class="text-center">D E V E L O P I N G</h3>
         </div>
-        <button type="button" class="collapsible">PART ONE: Learning Styles & Resources</button>
+        <button type="button" class="collapsible">PART ONE: Learning Styles & Resources<img class="dropdown-icon"
+                src="images/icons/circle-down-solid.svg" /></button>
         <div class="content">
             <p>| By Lachelle Pavlovic | Sept 04, 2021 |</p>
             <p>When starting out, gaining access to educational content and identifying resources appropriate to your
@@ -101,7 +102,8 @@
                     href="https://www.tutorialspoint.com/tutorialslibrary.htm">tutorialspoint</a>
             </p>
         </div>
-        <button type="button" class="collapsible">PART TWO: Terms & Guidelines</button>
+        <button type="button" class="collapsible">PART TWO: Terms & Guidelines<img class="dropdown-icon"
+                src="images/icons/circle-down-solid.svg" /></button>
         <div class="content">
             <p>| By Lachelle Pavlovic | COMING SOON! |</p>
         </div>
@@ -124,16 +126,18 @@
         </script>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
-                class="footer-icon" src="images/envelope-fill.svg" alt="email" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer"
-            href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/instagram.svg"
+        <a title="Email" target="_blank" rel="noopener noreferrer"
+            href="mailto:lachelle.anne@gmail.com"><img class="footer-icon" src="images/icons/envelope-fill.svg"
+                alt="email" /></a>
+        <a title="Instagram" target="_blank" rel="noopener noreferrer"
+            href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/icons/instagram.svg"
                 alt="instagram" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer"
-            href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/linkedin.svg"
+        <a title="LinkedIn" target="_blank" rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/icons/linkedin.svg"
                 alt="linkedin" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img
-                class="footer-icon" src="images/github.svg" alt="github" /></a>
+        <a title="GitHub" target="_blank" rel="noopener noreferrer"
+            href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/icons/github.svg"
+                alt="github" /></a>
     </footer>
 </body>
 
