--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=11" rel="stylesheet" />
+    <link href="styles.css?v=12" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -47,91 +47,37 @@
             <h3 class="text-center">L A C H E L L E</h3>
             <h6 class="text-center">P A V L O V I C</h6>
         </div>
-        <div class="heading-subtitle">
-            <h5>SKILLS
-            </h5>
-        </div>
-        <div>
-            <div class="bar">
-                <div class="info">
-                    <span>HTML</span>
-                </div>
-                <div class="progress-line html">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>CSS</span>
-                </div>
-                <div class="progress-line css">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>React</span>
-                </div>
-                <div class="progress-line react">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>React Native</span>
-                </div>
-                <div class="progress-line react-native">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>JavaScript</span>
-                </div>
-                <div class="progress-line javascript">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>C#</span>
-                </div>
-                <div class="progress-line c-sharp">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>SQL</span>
-                </div>
-                <div class="progress-line sql">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>Google Analytics</span>
-                </div>
-                <div class="progress-line google-analytics">
-                    <span></span>
-                </div>
-            </div>
+        <div class="text-center" style="justify-content: center; align-content: center;padding-top: 35px;">
+            
+            <h1>WELCOME</h1>
+            <h5>TO MY</h5>
+            <h1>PAGE!</h1>
         </div>
         <div class="home-image-column">
             <img class="profile-image" src="images/profile_img.jpg" alt="lachelle-anne">
         </div>
+        <div class="paragraph text-center">
+            <p>As a recent graduate from TAFE NSW, I aspire to gain experience and seek opportunities within the
+                industry to engage and work alongside a team of passionate developers.</p>
+            <p>Through gained knowledge from my studies, I have a greater understanding within full-stack
+                development
+                processes and have obtained soft
+                and technical skills to assist further in my career and education.</p>
+        </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
-                class="footer-icon" src="images/envelope-fill.svg" alt="email" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer"
-            href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/instagram.svg"
+        <a title="Email" target="_blank" rel="noopener noreferrer"
+            href="mailto:lachelle.anne@gmail.com"><img class="footer-icon" src="images/icons/envelope-fill.svg"
+                alt="email" /></a>
+        <a title="Instagram" target="_blank" rel="noopener noreferrer"
+            href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/icons/instagram.svg"
                 alt="instagram" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer"
-            href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/linkedin.svg"
+        <a title="LinkedIn" target="_blank" rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/icons/linkedin.svg"
                 alt="linkedin" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img
-                class="footer-icon" src="images/github.svg" alt="github" /></a>
+        <a title="GitHub" target="_blank" rel="noopener noreferrer"
+            href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/icons/github.svg"
+                alt="github" /></a>
     </footer>
 </body>
 
