--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=11" rel="stylesheet" />
+    <link href="styles.css?v=12" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -46,41 +46,73 @@
         <div class="heading-title">
             <h3 class="text-center">P R O J E C T S</h3>
         </div>
-        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
-                rel="noopener noreferrer" href="https://github.com/lachelle-anne/music-player.git">MUSIC PLAYER</a></h5>
-        <video class="project-video" src="./videos/music.mp4" controls poster="./images/projects/music.png"></video>
-        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
-                rel="noopener noreferrer" href="https://github.com/lachelle-anne/spock-rock-game.git">SPOCK ROCK
-                GAME</a></h5>
-        <video class="project-video" src="./videos/spock.mp4" controls poster="images/projects/spock.png"></video>
-        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
-                rel="noopener noreferrer" href="https://github.com/lachelle-anne/calculator.git">CALCULATOR</a></h5>
-        <video class="project-video" src="./videos/calculator.mp4" controls
-            poster="images/projects/calculator.png"></video>
-        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
-                rel="noopener noreferrer" href="https://github.com/lachelle-anne/membership-system.git">MEMBERSHIP
-                SYSTEM</a></h5>
-        <video class="project-video" src="./videos/member-system.mp4" controls
-            poster="images/projects/member-system.png"></video>
-        <h5 class="project-subheading bubble text-center"><a class="project-link" target="_blank"
-                rel="noopener noreferrer" href="https://github.com/lachelle-anne/order-management-system.git">ORDER
-                MANAGEMENT SYSTEM</a></h5>
-        <video class="project-video" src="./videos/order-system.mp4" controls
-            poster="images/projects/order-system.png"></video>
-        <h5 class="project-subheading bubble text-center"><a class="project-link" href="https://lachelle-anne.com/">LACHELLE-ANNE.COM</a></h5>
-                <div class="paragraph"><p>This website is an ongoing project of mine to use as my portfolio, displaying my projects and blog entries. </p></div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">MUSIC PLAYER</h5>
+            <p>A JavaScript web project using HTML, CSS & JavaScript.</p>
+            <video class="project-video" src="./videos/music.mp4" controls poster="./images/projects/music.png"></video>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/music-player.git"><img title="Music Player on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">SPOCK ROCK GAME</h5>
+            <p>A JavaScript web project using HTML, CSS & JavaScript.</p>
+            <video class="project-video" src="./videos/spock.mp4" controls poster="images/projects/spock.png"></video>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/spock-rock-game.git"><img title="Spock Rock Game on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">CALCULATOR</h5>
+            <p>A JavaScript web project using HTML, CSS & JavaScript.</p>
+            <video class="project-video" src="./videos/calculator.mp4" controls
+                poster="images/projects/calculator.png"></video>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/calculator.git"><img title="Calculator on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">MEMBERSHIP SYSTEM</h5>
+            <p>An ASP.NET web project using MVC.</p>
+            <video class="project-video" src="./videos/member-system.mp4" controls
+                poster="images/projects/member-system.png"></video>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/membership-system.git"><img
+                        title="Membership System on GitHub" class="project-github-icon"
+                        src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">ORDER MANAGEMENT SYSTEM</h5>
+            <p>A C# desktop application using .NET and a WPF UI.</p>
+            <video class="project-video" src="./videos/order-system.mp4" controls
+                poster="images/projects/order-system.png"></video>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/order-management-system.git"><img
+                        title="Order Management System on GitHub" class="project-github-icon"
+                        src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">LACHELLE-ANNE.COM</h5>
+            <p>A Static HTML website using HTML, CSS & JavaScript</p>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/lachelle-anne.github.io.git"><img
+                        title="lachelle-anne.com on GitHub" class="project-github-icon"
+                        src="images/icons/github.svg" /></a></p>
+        </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
-                class="footer-icon" src="images/envelope-fill.svg" alt="email" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer"
-            href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/instagram.svg"
+        <a title="Email" target="_blank" rel="noopener noreferrer"
+            href="mailto:lachelle.anne@gmail.com"><img class="footer-icon" src="images/icons/envelope-fill.svg"
+                alt="email" /></a>
+        <a title="Instagram" target="_blank" rel="noopener noreferrer"
+            href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/icons/instagram.svg"
                 alt="instagram" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer"
-            href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/linkedin.svg"
+        <a title="LinkedIn" target="_blank" rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/icons/linkedin.svg"
                 alt="linkedin" /></a>
-        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img
-                class="footer-icon" src="images/github.svg" alt="github" /></a>
+        <a title="GitHub" target="_blank" rel="noopener noreferrer"
+            href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/icons/github.svg"
+                alt="github" /></a>
     </footer>
 </body>
 
