--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=12" rel="stylesheet" />
+    <link href="styles.css?v=13" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -89,17 +89,15 @@
         <div class="bubble project-subheading text-center">
             <h5 class="project">NOTEPAD</h5>
             <p>A React.js application for writing and storing notes.</p>
-            <video class="project-video" src="./videos/notepad.mp4" controls
-                poster="images/projects/notepad.png">
+            <video class="project-video" src="./videos/notepad.mp4" controls poster="images/projects/notepad.png">
                 <script>
                     var video = document.currentScript.parentElement;
                     video.volume = 0.3;
                 </script>
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/notepad.git"><img
-                        title="Notepad on GitHub" class="project-github-icon"
-                        src="images/icons/github.svg" /></a></p>
+                    href="https://github.com/lachelle-anne/notepad.git"><img title="Notepad on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
         </div>
 
         <div class="bubble project-subheading text-center">
