--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=12" rel="stylesheet" />
+    <link href="styles.css?v=13" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -48,7 +48,7 @@
             <h6 class="text-center">P A V L O V I C</h6>
         </div>
         <div class="text-center" style="justify-content: center; align-content: center;padding-top: 35px;">
-            
+
             <h1>WELCOME</h1>
             <h5>TO MY</h5>
             <h1>PAGE!</h1>
@@ -66,18 +66,15 @@
         </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
-        <a title="Email" target="_blank" rel="noopener noreferrer"
-            href="mailto:lachelle.anne@gmail.com"><img class="footer-icon" src="images/icons/envelope-fill.svg"
-                alt="email" /></a>
-        <a title="Instagram" target="_blank" rel="noopener noreferrer"
-            href="https://www.instagram.com/la_codes/"><img class="footer-icon" src="images/icons/instagram.svg"
-                alt="instagram" /></a>
+        <a title="Email" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
+                class="footer-icon" src="images/icons/envelope-fill.svg" alt="email" /></a>
+        <a title="Instagram" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><img
+                class="footer-icon" src="images/icons/instagram.svg" alt="instagram" /></a>
         <a title="LinkedIn" target="_blank" rel="noopener noreferrer"
             href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon" src="images/icons/linkedin.svg"
                 alt="linkedin" /></a>
-        <a title="GitHub" target="_blank" rel="noopener noreferrer"
-            href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/icons/github.svg"
-                alt="github" /></a>
+        <a title="GitHub" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img
+                class="footer-icon" src="images/icons/github.svg" alt="github" /></a>
     </footer>
 </body>
 
