media settings and css cleanup

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=13" rel="stylesheet" />
+    <link href="styles.css?v=14" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -37,9 +37,6 @@
                     </li>
                 </ul>
             </nav>
-            <div id="myTabContent" class="tab-content">
-                <div class="tab-pane fade show active" id="home"></div>
-            </div>
         </div>
     </header>
     <div class="container">
@@ -139,7 +136,7 @@
                         src="images/icons/github.svg" /></a></p>
         </div>
     </div>
-    <footer class="border-top border-light footer fixed-bottom">
+    <footer class="footer">
         <a title="Email" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
                 class="footer-icon" src="images/icons/envelope-fill.svg" alt="email" /></a>
         <a title="Instagram" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><img
