project listing adjustment

--- a/projects.html
+++ b/projects.html
@@ -135,6 +135,36 @@
                         title="lachelle-anne.com on GitHub" class="project-github-icon"
                         src="images/icons/github.svg" /></a></p>
         </div>
+        <h5 class="subtitle" style="padding-top: 20px;">COLLABORATIONS
+        </h5>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">TUNE IT</h5>
+            <p>A collaboration with <a title="jasperdunn" href="https://github.com/jasperdunn">Jasper</a> on an
+                instrument tuning React application,
+                designing the user interface of this project using Typescript.</p>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/jasperdunn/tunings.git"><img title="Tune It on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">ARKSCRIBE</h5>
+            <p>A collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on a
+                breeding tracker for the game Ark: Survival Evolved,
+                designing the interface of this project with WPF.</p>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/Necropixel15616/ArkScribe.git"><img title="ArkScribe on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">THE NAV BAR</h5>
+            <p>A collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on an
+                reservation system for restaurants,
+                designing primary the user interface of this project with C# HTML, CSS, Bootstrap & jQuery libraries.
+                This was a Diploma major project.</p>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/Necropixel15616/ArkScribe.git"><img title="The Nav Bar on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
     </div>
     <footer class="footer">
         <a title="Email" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img
