project collaborations section

--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,8 @@
 
         <div class="bubble project-subheading text-center">
             <h5 class="project">NOTEPAD</h5>
-            <p>A React.js application for writing and storing notes.</p>
+            <p>A React.js application for writing and storing notes. This was a project completed for the Diploma of
+                Software Development at TAFE NSW.</p>
             <video class="project-video" src="./videos/notepad.mp4" controls poster="images/projects/notepad.png">
                 <script>
                     var video = document.currentScript.parentElement;
@@ -99,7 +100,8 @@
 
         <div class="bubble project-subheading text-center">
             <h5 class="project">MEMBERSHIP SYSTEM</h5>
-            <p>An ASP.NET web project using .NET and MVC.</p>
+            <p>An ASP.NET web project using .NET and MVC. This was a project completed for the Diploma of Software
+                Development at TAFE NSW.</p>
             <video class="project-video" src="./videos/member-system.mp4" controls
                 poster="images/projects/member-system.png">
                 <script>
@@ -114,7 +116,8 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">ORDER MANAGEMENT SYSTEM</h5>
-            <p>A C# desktop application using .NET and a WPF UI.</p>
+            <p>A C# desktop application using .NET and a WPF UI. This was a project completed for the Certificate IV in
+                Programming at TAFE NSW.</p>
             <video class="project-video" src="./videos/order-system.mp4" controls
                 poster="images/projects/order-system.png">
                 <script>
@@ -160,7 +163,7 @@
             <p>A collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on an
                 reservation system for restaurants,
                 designing primary the user interface of this project with C# HTML, CSS, Bootstrap & jQuery libraries.
-                This was a Diploma major project.</p>
+                This was a project completed for the Diploma of Software Development at TAFE NSW.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/Necropixel15616/ArkScribe.git"><img title="The Nav Bar on GitHub"
                         class="project-github-icon" src="images/icons/github.svg" /></a></p>
