--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=15" rel="stylesheet" />
+    <link href="styles.css?v=16" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -162,7 +162,8 @@
             <h5 class="project">THE NAV BAR</h5>
             <p>A collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on an
                 reservation system for restaurants,
-                designing primary the user interface of this project with C# HTML, CSS, Bootstrap & jQuery libraries.
+                designing the user interface of this project with C# HTML & CSS, as well as utilising Bootstrap & jQuery
+                libraries.
                 This was a project completed for the Diploma of Software Development at TAFE NSW.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/Necropixel15616/ArkScribe.git"><img title="The Nav Bar on GitHub"
