project page update summary

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">MUSIC PLAYER</h5>
-            <p>A JavaScript web project using HTML, CSS & JavaScript.</p>
+            <p>A JavaScript web project to make a customised music player.</p>
             <video class="project-video" src="./videos/music.mp4" controls poster="./images/projects/music.png">
                 <script>
                     var video = document.currentScript.parentElement;
@@ -58,7 +58,7 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">SPOCK ROCK GAME</h5>
-            <p>A JavaScript web project using HTML, CSS & JavaScript.</p>
+            <p>A JavaScript web project to create a rock paper scissors lizard spock game.</p>
             <video class="project-video" src="./videos/spock.mp4" controls poster="images/projects/spock.png">
                 <script>
                     var video = document.currentScript.parentElement;
@@ -71,7 +71,7 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">CALCULATOR</h5>
-            <p>A JavaScript web project using HTML, CSS & JavaScript.</p>
+            <p>A JavaScript web project for a simple calculator.</p>
             <video class="project-video" src="./videos/calculator.mp4" controls poster="images/projects/calculator.png">
                 <script>
                     var video = document.currentScript.parentElement;
@@ -85,7 +85,7 @@
 
         <div class="bubble project-subheading text-center">
             <h5 class="project">NOTEPAD</h5>
-            <p>A React.js application for writing and storing notes. This was a project completed for the Diploma of
+            <p>A React.js application to write and store notes locally. This was a project completed for the Diploma of
                 Software Development at TAFE NSW.</p>
             <video class="project-video" src="./videos/notepad.mp4" controls poster="images/projects/notepad.png">
                 <script>
@@ -100,7 +100,8 @@
 
         <div class="bubble project-subheading text-center">
             <h5 class="project">MEMBERSHIP SYSTEM</h5>
-            <p>An ASP.NET web project using .NET and MVC. This was a project completed for the Diploma of Software
+            <p>A C# & ASP.NET web project for a simple membership system using CRUD operations. This was a project
+                completed for the Diploma of Software
                 Development at TAFE NSW.</p>
             <video class="project-video" src="./videos/member-system.mp4" controls
                 poster="images/projects/member-system.png">
@@ -116,7 +117,8 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">ORDER MANAGEMENT SYSTEM</h5>
-            <p>A C# desktop application using .NET and a WPF UI. This was a project completed for the Certificate IV in
+            <p>A C# desktop application to create and manage orders. This was a project completed for the Certificate IV
+                in
                 Programming at TAFE NSW.</p>
             <video class="project-video" src="./videos/order-system.mp4" controls
                 poster="images/projects/order-system.png">
@@ -132,7 +134,7 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">LACHELLE-ANNE.COM</h5>
-            <p>A Static HTML website using HTML, CSS & JavaScript.</p>
+            <p>A Static HTML website created to display my portfolio, including demos of my projects and a blog.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/lachelle-anne/lachelle-anne.github.io.git"><img
                         title="lachelle-anne.com on GitHub" class="project-github-icon"
@@ -144,14 +146,15 @@
             <h5 class="project">TUNE IT</h5>
             <p>A collaboration with <a title="jasperdunn" href="https://github.com/jasperdunn">Jasper</a> on an
                 instrument tuning React application,
-                designing the user interface of this project using Typescript.</p>
+                designing the user interface of this project using React & Typescript.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/jasperdunn/tunings.git"><img title="Tune It on GitHub"
                         class="project-github-icon" src="images/icons/github.svg" /></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">ARKSCRIBE</h5>
-            <p>A collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on a
+            <p>A C# collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on
+                a
                 breeding tracker for the game Ark: Survival Evolved,
                 designing the interface of this project with WPF.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
@@ -160,10 +163,10 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">THE NAV BAR</h5>
-            <p>A collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on an
-                reservation system for restaurants,
-                designing the user interface of this project with C# HTML & CSS, as well as utilising Bootstrap & jQuery
-                libraries.
+            <p>An ASP.NET core MVC collaboration with <a title="Necropixel15616"
+                    href="https://github.com/Necropixel15616">Jacob</a> on a
+                reservation system for restaurants, enabling management of bookings and processing reservations. Guest,
+                member and admin roles have been created to manage and restrict different sections within the system.
                 This was a project completed for the Diploma of Software Development at TAFE NSW.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/Necropixel15616/ArkScribe.git"><img title="The Nav Bar on GitHub"
